# bevy_simple_prefs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
bevy_simple_prefs/: Cargo.toml  LICENSE
bevy_simple_prefs/examples/: blah.rs  home_dir.rs  multiple.rs  prefs.rs  status.rs
bevy_simple_prefs/src/: lib.rs
bevy_simple_prefs/tests/: test.rs
bevy_simple_prefs_derive/: Cargo.toml  README.md
bevy_simple_prefs_derive/src/: lib.rs
