[package]
name = "bevy_simple_prefs"
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A small Bevy plugin for persisting multiple Resources to a single file"
repository = "https://github.com/rparrett/bevy_simple_prefs"
homepage = "https://github.com/rparrett/bevy_simple_prefs"
documentation = "https://docs.rs/bevy_simple_prefs"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies]
bevy_simple_prefs_derive = { path = "../bevy_simple_prefs_derive", version = "0.3" }
bevy = { version = "0.15", default-features = false }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
serde = "1.0"
ron = "0.8"

[dev-dependencies]
bevy = { version = "0.15" }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
home = "0.5.9"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
