[package]
name = "bevy_simple_prefs"
version = "0.6.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "A small Bevy plugin for persisting multiple Resources to a single file"
repository = "https://github.com/rparrett/bevy_simple_prefs"
homepage = "https://github.com/rparrett/bevy_simple_prefs"
documentation = "https://docs.rs/bevy_simple_prefs"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies]
bevy_simple_prefs_derive = { path = "../bevy_simple_prefs_derive", version = "0.6.2" }
web-sys = { version = "0.3", features = ["Window", "Storage"] }
serde = "1.0"
ron = "0.8"

[dependencies.bevy]
version = "0.17.0-rc.0"
default-features = false
features = ["bevy_log"]

[dev-dependencies.bevy]
version = "0.17.0-rc.0"
default-features = true

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
dirs = "6.0.0"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
