[package]
name = "bevy_simple_prefs_derive"
version = "0.6.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Derive macro for bevy_simple_prefs"
repository = "https://github.com/rparrett/bevy_simple_prefs"
homepage = "https://github.com/rparrett/bevy_simple_prefs"
documentation = "https://docs.rs/bevy_simple_prefs"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies]
quote = "1.0"
syn = "2.0"

[lib]
proc-macro = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
